# CMakeList.txt : CMake project for cpp_studio_win, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("cpp_studio_win")

# Add source to this project's executable.
add_executable (cpp_studio_win "cpp_studio_win.cpp" "cpp_studio_win.h")

# TODO: Add tests and install targets if needed.
